kube/nginx/nginx-deployment.yaml
# nginx-php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-php-deployment
spec:
  selector:
    matchLabels:
      app: nginx-php
  template:
    metadata:
      labels:
        app: nginx-php
    spec:
      containers:
      # Contenedor de Nginx
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: "/usr/share/nginx/html"
        - name: nginx-config
          mountPath: "/etc/nginx/conf.d/default.conf"  # Ruta absoluta del archivo
          subPath: "default.conf"  # Nombre del archivo en el ConfigMap

      # Contenedor de PHP-FPM
      - name: php-fpm
        image: docker.io/library/mi-php-fpm:1.0
        volumeMounts:
        - name: web-content
          mountPath: "/var/www/html"  # Ruta estándar de PHP-FPM

      # Volúmenes
      volumes:
      - name: web-content
        hostPath:
          path: "/web-content"  # Nueva ruta en el host
          type: DirectoryOrCreate
      - name: nginx-config
        configMap:
          name: nginx-configmap
