kube/nginx/nginx-service.yaml
# nginx-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-php-service
spec:
  selector:
    app: nginx-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # Puerto del contenedor de Nginx
