kube/nginx/nginx-ingress.yaml
# nginx-php-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-php-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: "nginx.izas.es"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-php-service
            port:
              number: 80
